--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <title></title>
-        <meta name="viewport" content="width-device-width, initial-scale=1.0">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="zuri-resume.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -56,12 +56,10 @@
                             <ul>
                                 <li>HTML</li>
                                 <li>Javascript</li>
-                                <li>Typescript</li>
                                 <li>CSS</li>
-                                <li>C++.</li>
-                                <li>Git</li>
-                                <li>Jasmine</li>
-                                <li>Mocha</li>
+                                <li>Python</li>
+                                <li>Figma</li>
+
                             </ul>
                         </li>
                     </ul>
